--- a/peerprep/src/styles/App.css
+++ b/peerprep/src/styles/App.css
@@ -1,16 +1,33 @@
+/* src/styles/App.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@400;700&display=swap');
+
+body {
+  font-family: 'Figtree', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button-custom {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: pink;
+  color: black;
+  border: none;
+  border-radius: 15px;
+  /* Curved corners */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button-custom:hover {
+  background-color: #ff69b4;
+  /* Slightly darker pink on hover */
 }
 
 .App-header {
@@ -22,17 +39,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
