--- a/peerprep/src/components/QuestionTable.css
+++ b/peerprep/src/components/QuestionTable.css
@@ -1,8 +1,14 @@
 /* src/components/QuestionTable.css */
 
-.table-container {
-    margin-top: 20px;
-    /* Space from the top of the container */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.parent-container {
+    /* Add a class to the parent element of .table-container */
+    padding-top: 20px;
 }
 
 .table-custom {
