--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -7,11 +7,15 @@ main {
   padding: 1rem;
   box-sizing: inherit;
   position: relative;
+  flex-direction: column;
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  margin-bottom: 3rem;
+  width: auto;
+  margin-bottom: 1rem;
+  padding: 2rem;
+  background-color: var(--surface-section);
+  border-radius: 0.75rem;
 }
