--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main class="main">
   <div class="content">
-    <p>Hello, this is a paragraph!</p>
-    <p-button label="Click me!" class="special-btn"/>
+    <p class="mt-0">Hello, this is a paragraph!</p>
+    <p-button label="Click me!"/>
   </div>
 </main>
 
