Add async animations provider

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,6 +2,8 @@
   <div class="content">
     <p class="mt-0">Hello, this is a paragraph!</p>
     <p-button label="Click me!"/>
+    <label class="mt-4">I am a label.</label>
+    <p-password class="mt-2"/>
   </div>
 </main>
 
