--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,7 +41,7 @@ body {
   display:flex;
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: #e5d6d6;
   overflow: hidden; /* Optional: to prevent scrolling */
 }
 
