--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -16,13 +16,13 @@
 
 pre,
 code {
-    font-family: var(--font-geist-mono);
+    font-family: var(--font-inter);
 }
 
 body {
     color: var(--foreground);
     background: var(--background);
-    font-family: var(--font-geist-sans);
+    font-family: var(--font-inter);
 }
 
 @layer utilities {
