--- a/frontend/src/routes/QuestionPage.css
+++ b/frontend/src/routes/QuestionPage.css
@@ -1,7 +1,7 @@
 .container {
   background-color: #e5d6d6;
 }
-/* 
+
 .question-page-container {
   display: flex;
   flex-direction: row;
@@ -110,4 +110,4 @@
 
 .menu-list li:hover {
   background-color: #ddd;
-} */
+}
