--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -3,14 +3,35 @@
 @tailwind utilities;
 
 :root {
-    --background: #ffffff;
+    --background: #f5f5f5;
     --foreground: #171717;
+    
+    --theme-900: #3B0764;
+    --theme-600: #7F57C2;
+    --theme-400: #C084FC;
+    --theme-100: #F3E8FF;
+
+    --slate-100: #F1F5F9;
+    --slate-200: #E2E8F0;
+    --slate-300: #CBD5E1;
+    --slate-400: #94A3B8;
+    --slate-700: #334155;
+    --slate-800: #1E293B;
+
+    --green-pri: #34D399;
+    --green-sec: #E1FCEF;
+
+    --red-pri: #EF4444;
+    --red-sec: #FEE2E2;
+
+    --orange-pri: #FB923C;
+    --orange-sec: #FFEDD5;  
 }
 
 @media (prefers-color-scheme: light) {
     :root {
-        --background: #0a0a0a;
-        --foreground: #ededed;
+        --background: #ffffff;
+        --foreground: var(--slate-700);
     }
 }
 
