--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,16 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-input::placeholder {
-    color: #928f8f;
-}
-
 :root {
     --background: #ffffff;
     --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
     :root {
         --background: #0a0a0a;
         --foreground: #ededed;
