--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -3,9 +3,6 @@
 @tailwind utilities;
 
 :root {
-    --background: #f5f5f5;
-    --foreground: #171717;
-
     --theme-900: #3b0764;
     --theme-600: #7f57c2;
     --theme-400: #c084fc;
@@ -26,6 +23,9 @@
 
     --orange-pri: #fb923c;
     --orange-sec: #ffedd5;
+
+    --background: #fff;
+    --foreground: var(--slate-700);
 }
 
 pre,
