--- a/frontend/src/routes/QuestionPage.css
+++ b/frontend/src/routes/QuestionPage.css
@@ -1,6 +1,3 @@
-.container {
-  background-color: #e5d6d6;
-}
 
 .question-page-container {
   display: flex;
@@ -11,19 +8,23 @@
   width:100vw;
 }
 
-.form-section {
+
+
+
+
+
+
+.right-section {
   display: flex;
+  padding:1%;
   flex-direction: column;
-  gap: 20px; 
-  width: 45%; 
-  box-sizing: border-box;
+  width: 55vw; 
 }
 
-.left-section {
+.info-row{
   display: flex;
-  background-color: pink;
-  flex-direction: column;
-  width: 55%; 
+  height:5vh;
+  font-size:25px;
 }
 
 .row {
@@ -41,17 +42,14 @@
   width: 48%;
 }
 
-.hints-section,
-.constraints-section {
-  display: flex;
-  flex-direction: column;
-}
-
-.textarea, .input-field {
+.textarea{
   width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
+  height:30vh;
+  min-height:10vh;
+  max-height:60vh;
+  border: 2px solid black;
   border-radius: 5px;
+  overflow-y: auto;
   box-sizing: border-box;
 }
 
@@ -59,55 +57,43 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 50%; 
+  width: 100%; 
   box-sizing: border-box;
 }
 
 .button-section {
   display: flex;
-  justify-content: flex-end;
+  width:100%;
+  height:5vh;
   margin-top: 20px;
+}
+
+.button-box{
+  display:flex;
+  width:50%;
+}
+
+.button-box-right{
+  display:flex;
+  width:50%;
+  justify-content:flex-end;
 }
 
 .set-question-button {
   background-color: #5a8542; 
+  height:100%;
   color: white;
-  padding: 10px 20px;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
 }
 
-.label {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.scrollable-menu {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-}
-
-.menu-list {
-  list-style-type: none;
-  padding: 0;
-  max-height: 200px;
-  overflow-y: auto; 
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-}
-
-.menu-list li {
-  padding: 8px;
-  background-color: #f9f9f9;
-  margin-bottom: 5px;
-  border-radius: 4px;
+.clear-question-button {
+  background-color: red; 
+  height:100%;
+  color: white;
+  border: none;
+  border-radius: 10px;
   cursor: pointer;
-  transition: background-color 0.2s;
 }
 
-.menu-list li:hover {
-  background-color: #ddd;
-}
