--- a/frontend/src/components/dashboard/Calendar.css
+++ b/frontend/src/components/dashboard/Calendar.css
@@ -1,5 +1,19 @@
 /* src/pages/Calendar.css */
 
+.calendar-container {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #ffe6f2;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    margin: 0 auto;
+}
+
 .calendar {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
@@ -19,7 +33,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 10px;
-    color: white;
+    color: black;
 }
 
 .calendar-button {
@@ -32,12 +46,21 @@
     margin-top: 20px;
     margin-left: 23px;
     margin-right: 23px;
-    width: 100px;
-    height: 40px;
+    width: 40px;
+    height: 30px;
 }
 
 .calendar-button:hover {
     background-color: #ff80bf;
+}
+
+.days-online {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 500;
+    color: black;
+    text-align: center;
+    /* text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); */
 }
 
 .empty-day {
