Update complexity selection using buttons

--- a/frontend/src/components/question/DialogForm.css
+++ b/frontend/src/components/question/DialogForm.css
@@ -1,7 +1,13 @@
+:root {
+    --radio-intial: #f154af;
+    --radio-selected: #ce92fa;
+}
+
 dialog {
     align-self: center;
     justify-self: center;
     border: none;
+    border-radius: 0.25rem;
 }
 
 form {
@@ -21,8 +27,34 @@ form > button {
     font-size: 100%;
 }
 
-form>input,
-form>textarea {
-    height: 40px;
-    font-size: 1rem;
+form textarea {
+    resize: none;
+}
+
+dialog button {
+    font-weight: bold;
+}
+
+.complexity-group {
+    display: flex;
+}
+
+input[type='radio'] {
+    display: none;
+}
+
+.radio-label {
+    cursor: pointer;
+    border: 3px solid var(--radio-intial);
+    color: var(--radio-intial);
+    font-size: 0.9em;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+}
+
+input[type='radio']:checked + label {
+    background-color: var(--radio-selected);
+    border: 3px solid var(--radio-selected);
+    color: #f5f5f5;
 }
