Fix dialog position bug in Safari

--- a/frontend/src/components/question/DialogForm.css
+++ b/frontend/src/components/question/DialogForm.css
@@ -4,8 +4,7 @@
 }
 
 dialog {
-    align-self: center;
-    justify-self: center;
+    margin: auto;
     border: none;
     border-radius: 0.25rem;
 }
