--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -3,29 +3,21 @@
 @tailwind utilities;
 
 :root {
-    --theme-900: #3b0764;
-    --theme-600: #7f57c2;
-    --theme-400: #c084fc;
-    --theme-100: #f3e8ff;
-
+    --background: #fff;
+    --foreground: var(--slate-700);
     --slate-100: #f1f5f9;
     --slate-200: #e2e8f0;
     --slate-300: #cbd5e1;
     --slate-400: #94a3b8;
     --slate-700: #334155;
     --slate-800: #1e293b;
-
     --green-pri: #34d399;
     --green-sec: #e1fcef;
-
     --red-pri: #ef4444;
     --red-sec: #fee2e2;
-
     --orange-pri: #fb923c;
     --orange-sec: #ffedd5;
-
-    --background: #fff;
-    --foreground: var(--slate-700);
+    --background: #ffffff;
 }
 
 pre,
@@ -47,8 +39,7 @@ body {
 
 @layer base {
     :root {
-        --background: 0 0% 100%;
-        --foreground: 240 10% 3.9%;
+        --foreground: 217 32.6% 17.5%;
         --card: 0 0% 100%;
         --card-foreground: 240 10% 3.9%;
         --popover: 0 0% 100%;
@@ -72,6 +63,12 @@ body {
         --chart-4: 43 74% 66%;
         --chart-5: 27 87% 67%;
         --radius: 0.5rem;
+        --white: 0 0% 100%;
+        --theme-900: 274, 86.9, 21.0%;
+        --theme-600: 262, 46.7%, 55.1%;
+        --theme-400: 270, 95.2%, 75.9%;
+        --theme-100: 268, 100%, 95.5%;
+        --hover-fill: 210.0, 40.0%, 96.1%;
     }
     .dark {
         --background: 240 10% 3.9%;
