--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -1,18 +1,78 @@
 .dashboard-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   flex-grow: 1;
+  height: 100%;
+  gap: 1rem;
+  padding: 1rem;
 }
 
-.dashbaord-header {
+.dashboard-header {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: center;
+  gap: 1rem;
+}
+
+.dashboard-stats {
+  display: flex;
+  flex-direction: row;
 }
 
 .dashbaord-table {
   flex-grow: 1;
+}
+
+.practice-history-container {
+  flex-grow: 0;
+  padding: 0;
+  gap: 0;
+}
+
+.practice-history-label {
+  margin: 1.5rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+tr { 
+  border: solid;
+  border-width: 1px 0;
+}
+
+tr:last-child { 
+    border-bottom: none; 
+}
+
+th, td {
+  font-size: 1.2rem;
+}
+
+td {
+  padding: 1rem 2rem;
+}
+
+th {
+  padding: 0.5rem 2rem;
+  text-align: left;
+  font-weight: 600;
+}
+
+.view-button {
+  padding: 0.5rem 1.5rem;
+  border-radius: 10rem;
+  text-align: center;
+  border-style: none;
+}
+
+table td, th{
+  white-space: nowrap
+}
+
+table .expand {
+  width: 99%
 }
