--- a/peerprep/style/layout.module.css
+++ b/peerprep/style/layout.module.css
@@ -8,8 +8,9 @@
 
 .container {
   display: flex;
+  flex-direction: column;
   min-width: 100%;
-  max-height: 90%;
+  height: 90%;
   overflow-y: scroll;
 }
 
