--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -19,7 +19,7 @@
 }
 
 .App-table th {
-  background-color: #F7B32B;
+  background-color: #f7b32b;
   color: black;
 }
 
@@ -28,20 +28,20 @@
 }
 
 .App-table tr:nth-child(even) {
-  background-color: #FFFFCC;
+  background-color: #ffffcc;
 }
 
 .delete-btn {
   background-color: transparent !important;
   font-size: 12px;
-  color: #B30000 !important;
+  color: #b30000 !important;
   border: none !important;
   cursor: pointer;
   box-shadow: none !important;
 }
 
 .App-header {
-  background-color: #2F3654;
+  background-color: #2f3654;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -60,7 +60,7 @@
 }
 
 .create-btn {
-  background-color: #F7B32B;
+  background-color: #f7b32b;
   color: white;
   border: 2px solid white;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4), 0 6px 6px rgba(0, 0, 0, 0.7);
