--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -65,10 +65,20 @@ body {
         --radius: 0.5rem;
         --white: 0 0% 100%;
         --theme-900: 274, 86.9%, 21.0%;
+        --theme-700: 263, 70%, 50.4%;
         --theme-600: 262.1, 83.3%, 57.8%;
         --theme-400: 270, 95.2%, 75.9%;
         --theme-100: 268, 100%, 95.5%;
         --hover-fill: 210.0, 40.0%, 96.1%;
+        --green-default: 158.1, 64.4%, 51.6%;
+        --green-light: 151.1, 81.8%, 93.5%;
+        --green-dark: 160.1, 84.1%, 39.4%;
+        --red-default: 0, 82.4%, 60.2%;
+        --red-light: 0, 93.3%, 94.12%;
+        --red-dark: 0, 72.2%, 50.6%;
+        --orange-default: 27.0, 96.0%, 61.0%;
+        --orange-light: 34.3, 100%, 91.8%;
+        --orange-dark: 20.5, 90.2%, 48.2%;
     }
     .dark {
         --background: 240 10% 3.9%;
