--- a/frontend/src/routes/QuestionPage.css
+++ b/frontend/src/routes/QuestionPage.css
@@ -53,7 +53,26 @@
   box-sizing: border-box;
 }
 
+.questionarea{
+  width: 100%;
+  height:10vh;
+  min-height:5vh;
+  max-height:15vh;
+  border: 2px solid black;
+  border-radius: 5px;
+  overflow-y: auto;
+  box-sizing: border-box;
+}
+
 .question-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%; 
+  box-sizing: border-box;
+}
+
+.title-section {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
