--- a/apps/question-service/src/app/styles.scss
+++ b/apps/question-service/src/app/styles.scss
@@ -44,6 +44,10 @@
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02) !important;
 }
 
+.clear-button {
+  width: 100%;
+}
+
 .categories-multi-select,
 .difficulty-select,
 .order-select {
