--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 html,
 body {
   margin: 0;
@@ -24,4 +25,10 @@ body {
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+@layer base {
+  :root {
+    --color-primary: 
+  }
 }
