--- a/frontend-service/src/pages/SignIn/login.css
+++ b/frontend-service/src/pages/SignIn/login.css
@@ -1,9 +1,7 @@
 .login-form {
   display: flex;
   flex-direction: column;
-  width: 300px;
-  border-radius: 10px;
-  margin: 0;
+  width: 400px;
 }
 
 input[type="email"],
@@ -30,12 +28,8 @@ input[type="password"] {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-}
-
-.login-button:hover {
+  height: 800px;
   background-color: #ffffff;
-  border: 1px solid #65afff;
 }
 
 .extras {
@@ -51,7 +45,7 @@ input[type="password"] {
 }
 
 .forgot-password {
-  margin-left: 30px;
+  margin-left: 120px;
   color: #007bff;
   text-decoration: underline;
 }
@@ -70,24 +64,31 @@ p {
   text-align: center;
 }
 
+.accountSignUp {
+  display: block;
+  margin-top: 20px;
+  padding-bottom: 15px;
+  text-align: center;
+  text-decoration: underline;
+}
+
 .login-graphic {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
-  padding: 20px;
+  padding: 10px;
 }
 
 .login-graphic img {
-  max-width: 100%;
+  max-width: 250%;
   height: auto;
 }
 
 .login-container {
   display: flex;
   width: 80%;
-  max-width: 1200px;
+  max-width: 1000px;
   justify-content: space-between;
   align-items: center;
 }
