--- a/peerprep_fe/src/styles/globals.css
+++ b/peerprep_fe/src/styles/globals.css
@@ -22,6 +22,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.error {
+  color: red;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
