Connect Edit Question page to BE

--- a/peer-prep-fe/src/edit-page/edit-page.component.css
+++ b/peer-prep-fe/src/edit-page/edit-page.component.css
@@ -211,4 +211,22 @@ input[type="checkbox"] {
   transform: scale(1.1);
 }
 
+.error-message-title {
+  color: red;
+  font-size: 15px;
+}
+
+.error-message-description {
+  color: red;
+  font-size: 15px;
+  margin-top: -15px;
+}
+
+.error-message-difficulty {
+  margin-top: 5px;
+  margin-left: 570px;
+  color: red;
+}
+
+
 
