--- a/peer-prep-fe/src/edit-page/edit-page.component.html
+++ b/peer-prep-fe/src/edit-page/edit-page.component.html
@@ -4,46 +4,54 @@
     <button class="back-button" (click)="navigateToList()">&#10005;</button>
   </div>
 
-  <div class="question-title">
-    <h2>QUESTION TITLE</h2>
-    <div class="title-box">
-      <textarea [(ngModel)]="questionTitle" class="editable-box"></textarea>
+  <form [formGroup]="questionForm" (ngSubmit)="saveQuestion()">
+    <div class="question-title">
+      <h2>QUESTION TITLE</h2>
+      <div class="title-box">
+        <textarea [(ngModel)]="question_title" class="editable-box" placeholder="Enter question title here..." formControlName="question_title"></textarea>
+      </div>
+      <div *ngIf="questionForm.get('question_title')?.touched && questionForm.get('question_title')?.invalid" class="error-message-title">
+        Title is required.
+      </div>
     </div>
-  </div>
 
-  <div class="question-description">
-    <h2>QUESTION DESCRIPTION</h2>
-    <div class="description-box">
-      <textarea [(ngModel)]="questionDescription" class="editable-box"></textarea>
+    <div class="question-description">
+      <h2>QUESTION DESCRIPTION</h2>
+      <div class="description-box">
+        <textarea [(ngModel)]="question_description" class="editable-box" placeholder="Enter question title here..." formControlName="question_description"></textarea>
+      </div>
+      <div *ngIf="questionForm.get('question_description')?.touched && questionForm.get('question_description')?.invalid" class="error-message-description">
+        Description is required.
+      </div>
     </div>
-  </div>
+  </form>
 
   <div class="question-category">
-    <h2>CATEGORY</h2>
-    <div class="selection">
-      <div class="dropdown">
-        <button class="dropdown-toggle" (click)="toggleDropdown()">
-          Select all that applies
-        </button>
-        <div class="dropdown-menu" [class.show]="dropdownOpen">
-          <div *ngFor="let category of categories" class="dropdown-item">
-            <label class="dropdown-label">
-              {{category.name}}
-              <input type="checkbox" [(ngModel)]="category.selected" />
-            </label>
+      <h2>CATEGORY</h2>
+      <div class="selection">
+        <div class="dropdown">
+          <button class="dropdown-toggle" (click)="toggleDropdown()">
+            Select all that applies
+          </button>
+          <div class="dropdown-menu" [class.show]="dropdownOpen">
+            <div *ngFor="let category of question_categories" class="dropdown-item">
+              <label class="dropdown-label">
+                {{category.name}}
+                <input type="checkbox" [(ngModel)]="category.selected" />
+              </label>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="difficulty-buttons">
-        <button class="diff-butt" [ngClass]="{'selected': difficulty === 'easy'}" (click)="setDifficulty('easy')">Easy</button>
-        <button class="diff-butt" [ngClass]="{'selected': difficulty === 'medium'}" (click)="setDifficulty('medium')">Medium</button>
-        <button class="diff-butt" [ngClass]="{'selected': difficulty === 'hard'}" (click)="setDifficulty('hard')">Hard</button>
+        <div class="difficulty-buttons">
+          <button class="diff-butt" [ngClass]="{'selected': question_complexity === 'Easy'}" (click)="setDifficulty('Easy')">Easy</button>
+          <button class="diff-butt" [ngClass]="{'selected': question_complexity === 'Medium'}" (click)="setDifficulty('Medium')">Medium</button>
+          <button class="diff-butt" [ngClass]="{'selected': question_complexity === 'Hard'}" (click)="setDifficulty('Hard')">Hard</button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="saving-button">
-    <button class="save-button" (click)="saveQuestion()">SAVE</button>
-  </div>
+    <div class="saving-button">
+      <button class="save-button" (click)="saveQuestion()">SAVE</button>
+    </div>
 </div>
