Add account creation feature and page

--- a/peer-prep-fe/src/app/login/login.component.html
+++ b/peer-prep-fe/src/app/login/login.component.html
@@ -1,7 +1,44 @@
-<div class="login-button">
-  <div
-    id="google-login-button"
-    class="login-button btn btn-primary"
-    (click)="signInWithGoogle()"
-  ></div>
+<div class="container">
+
+  <div class="form-container">
+    <h2> Create Account</h2>
+    <form id="userForm"  [formGroup]="createAccountForm">
+
+      <!-- Username -->
+      <label for="name">Name:</label>
+      <div *ngIf="createAccountForm.get('username')?.invalid && createAccountForm.get('username')?.touched"
+        class="error-message">
+        <small *ngIf="createAccountForm.get('username')?.hasError('required')">Username is required</small>
+      </div>
+      <input type="text" id="name" formControlName="username">
+      
+
+      <!-- Email -->
+      <label for="email">Email:</label>
+      <div *ngIf="createAccountForm.get('email')?.invalid && createAccountForm.get('email')?.touched" class="error-message">
+        <small *ngIf="createAccountForm.get('email')?.hasError('required')">Email is required</small>
+        <small *ngIf="createAccountForm.get('email')?.hasError('email')">Invalid email address</small>
+      </div>
+
+      <input type="email" id="email" formControlName="email">
+      
+      <!-- Password -->
+      <label for="password">Password:</label>
+      <div *ngIf="createAccountForm.get('password')?.invalid && createAccountForm.get('password')?.touched"
+        class="error-message">
+        <small *ngIf="createAccountForm.get('password')?.hasError('required')">Password is required</small>
+        <small *ngIf="createAccountForm.get('password')?.hasError('minlength')">Minimum 6 characters</small>
+      </div>
+      <input type="password" id="password" formControlName="password">
+      
+      <button class="submit" type="submit" (click)="createAccount()" [disabled]="createAccountForm.invalid">Submit</button>
+    </form>
+    
+  </div>
+  <!-- <div class="button">
+    
+    <div id="google-login-button" class="login-button btn btn-primary" (click)="signInWithGoogle()"></div>
+  </div> -->
 </div>
+
+
