--- a/frontend/src/routes/QuestionPage.css
+++ b/frontend/src/routes/QuestionPage.css
@@ -28,6 +28,8 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
+  width:100%;
+  height:6vh;
 }
 
 .dropdown {
@@ -36,6 +38,17 @@
   padding: 8px;
   border-radius: 4px;
   width: 48%;
+}
+
+.dropdown1 {
+  background-color: #caa;
+  border: none;
+  padding: 8px;
+  border-radius: 4px;
+  width: 48%;
+  height:70%;
+  min-height:60%;
+  max-height:100%;
 }
 
 .textarea{
