Fix build errors

--- a/peer-prep-fe/src/styles.css
+++ b/peer-prep-fe/src/styles.css
@@ -48,7 +48,7 @@
     border-radius: 15px;
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: auto; /* Space between title and difficulty */
+    margin-left: auto; 
     background-color: #f0f0f0;
   }
   
