--- a/peer-prep-fe/src/components/question-description/question-description.component.html
+++ b/peer-prep-fe/src/components/question-description/question-description.component.html
@@ -7,19 +7,16 @@
     <p class="difficulty" [ngClass]="data.questionDifficulty">{{ data.questionDifficulty }}</p>
    
       </div>
- 
 <div>
-<p>
+    <p>
     QUESTION DESCRIPTION
-</p>
-<app-question-explanation-box>
-
-</app-question-explanation-box>
+    </p>
+<app-question-explanation-box></app-question-explanation-box>
 </div>
 <div>
-<p>
-    CATEGORIES
-</p>
+    <p>
+CATEGORIES
+    </p>
 <app-question-categories></app-question-categories>
 </div>
 </div>
