--- a/frontend/src/routes/QuestionPage.css
+++ b/frontend/src/routes/QuestionPage.css
@@ -2,11 +2,12 @@
 .question-page-container {
   display: flex;
   padding: 1em;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   background-color: #e5d6d6; 
   height: 100vh;
-  width:100vw;
+  width: 100vw;
+  overflow-y: scroll;
 }
 
 
@@ -14,7 +15,6 @@
   display: flex;
   padding:1%;
   flex-direction: column;
-  width: 55vw; 
 }
 
 .info-row{
