--- a/frontend/src/components/QuestionTable.module.css
+++ b/frontend/src/components/QuestionTable.module.css
@@ -77,6 +77,71 @@
     color: #b30021;
 }
 
-.form {
+
+/* form css */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100; /* Ensure it's above the other content */
+  }
+  
+  .modal {
     background-color: white;
-}
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 101;
+    max-width: 500px;
+    width: 100%;
+  }
+
+  .blurred {
+    filter: blur(2px);
+    pointer-events: none; /* Prevent interaction with blurred content */
+  }
+  
+  .closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+  }
+
+  form h3 {
+    width: 100%;
+    text-align: center;
+    margin: 0px;
+  }
+
+  form div {
+    display: grid;
+  }
+
+  input {
+    border: none;
+    border:solid 1px #ccc;
+    border-radius: 10px;
+    padding: 10px
+  }
+
+ textarea {
+    border: none;
+    border:solid 1px #ccc;
+    border-radius: 10px;
+ }
