--- a/peer-prep-fe/src/components/question-box/question-box.component.html
+++ b/peer-prep-fe/src/components/question-box/question-box.component.html
@@ -2,5 +2,10 @@
   <button class="question-title" (click)="openModal()">
     {{ index + 1 }}. {{ question.title.toUpperCase() }}
   </button>
-  <span class="difficulty" [ngClass]="question.difficulty">{{ question.difficulty }}</span>
+  <div class="misc">
+    <button class="edit-icon" (click)="openEditModal()">
+      <i class="far fa-pencil fa-2x"></i>
+    </button>
+    <span class="difficulty" [ngClass]="question.difficulty">{{ question.difficulty }}</span>
+  </div>
 </div>
