--- a/peer-prep-fe/src/edit-page/edit-page.component.css
+++ b/peer-prep-fe/src/edit-page/edit-page.component.css
@@ -8,6 +8,7 @@
   margin-left: auto;
   margin-right: auto;
   font-family: "Signika", sans-serif;
+  height: 700px;
 }
 
 .question-title {
@@ -26,7 +27,7 @@
   background-color: transparent;
   border: none;
   color: #333;
-  font-size: 50px;
+  font-size: 40px;
   cursor: pointer;
   display: inline-flex;
   align-items: center;
@@ -106,7 +107,7 @@
   position: absolute;
   width: 80%;
   border: 1px solid #ccc;
-  max-height: 200px;
+  max-height: 100px;
   overflow-y: auto;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
   z-index: 1;
@@ -203,6 +204,7 @@ input[type="checkbox"] {
   font-family: "Signika", sans-serif;
   background-color: white;
   color: black;
+  cursor: pointer;
 }
 
 .save-button:hover {
