--- a/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
+++ b/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
@@ -5,10 +5,9 @@
     </div>
     <div class="button-container">
         <button id="button">SORT</button>
-        <button id="button" >FILTER</button>
-        <button id="button">ADD QUESTION</button>
+        <button id="button">FILTER</button>
+        <button id="button" (click)="openAddModal()">ADD QUESTION</button>
     </div>
 </div>
 
 
-  
