--- a/peer-prep-fe/src/add-page/add-page.component.html
+++ b/peer-prep-fe/src/add-page/add-page.component.html
@@ -1,7 +1,7 @@
 <div class="add-question-container">
   <div class = header>
     <h1>ADD QUESTION</h1>
-    <button class="back-button" (click)="navigateToList()">&#10005;</button>
+    <button class="back-button" (click)="navigateBack()">&#10005;</button>
   </div>
 
   <form [formGroup]="questionForm" (ngSubmit)="saveQuestion()">
