--- a/peer-prep-fe/src/components/question-box/question-box.component.html
+++ b/peer-prep-fe/src/components/question-box/question-box.component.html
@@ -1,11 +1,11 @@
 <div class="question-box">
   <button class="question-title" (click)="openModal()">
-    {{ index + 1 }}. {{ question.title.toUpperCase() }}
+    {{ index + 1 }}. {{ question.question_title.toUpperCase() }}
   </button>
   <div class="misc">
     <button class="edit-icon" (click)="openEditModal()">
       <i class="far fa-pencil fa-2x"></i>
     </button>
-    <span class="difficulty" [ngClass]="question.difficulty">{{ question.difficulty }}</span>
+    <span class="difficulty" [ngClass]="question.question_complexity">{{ question.question_complexity }}</span>
   </div>
 </div>
