Sync Qn description and categories for view qn

--- a/peer-prep-fe/src/components/question-categories/question-categories.component.html
+++ b/peer-prep-fe/src/components/question-categories/question-categories.component.html
@@ -1,5 +1,5 @@
-<div class = "question-categories">
+<div class = "question-category">
     <p>
-        Queue
+        {{questionCategory}}
     </p>
 </div>
