--- a/peer-prep-fe/src/components/question-categories/question-categories.component.css
+++ b/peer-prep-fe/src/components/question-categories/question-categories.component.css
@@ -1,11 +1,11 @@
-.question-categories {
-    width: auto; 
-    height: 20px; 
+.question-category {
+    width: auto;
+    height: 20px;
     background-color: #C0C0C0;
     display: flex;
     justify-content: center; 
     align-items: center;
-    padding: 2px 2px; 
+    padding: 5px 5px; 
     border-radius: 10px;
     margin-bottom: 10px;
     color: black;
