Updated hover styling

--- a/peer-prep-fe/src/add-page/add-page.component.css
+++ b/peer-prep-fe/src/add-page/add-page.component.css
@@ -37,8 +37,8 @@
 }
 
 .back-button:hover {
-  color: mediumvioletred;
-  transform: scale(2.1);
+  /* color: mediumvioletred; */
+  transform: scale(1.5);
 }
 
 .description-box {
