--- a/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
+++ b/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="search-container">
-        <input class="search-bar" type="search" placeholder="Search..." />
-        <i class="fa-solid fa-magnifying-glass search-icon" style="color: white"></i>
+        <input class="search-bar" type="search" placeholder="Search..." [(ngModel)]="searchTerm" />
+        <i class="fa-solid fa-magnifying-glass search-icon" (click)="searchQuestions()" style="color: white"></i>
     </div>
     <div class="button-container">
         <button id="button">SORT</button>
