--- a/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
+++ b/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
@@ -1,7 +1,10 @@
 <div class="container">
     <div class="search-container">
         <input class="search-bar" type="search" placeholder="Search..." [(ngModel)]="searchTerm" />
-        <i class="fa-solid fa-magnifying-glass search-icon" (click)="searchQuestions()" style="color: white"></i>
+        <button id="button" (click)="searchQuestions()">
+            <i class="fa-solid fa-magnifying-glass search-icon" style="color: white">
+            </i>
+        </button>
     </div>
     <div class="button-container">
         <button id="button" (click)="sortQuestions()">SORT</button>
