--- a/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
+++ b/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.html
@@ -1,9 +1,8 @@
 <div class="container">
     <div class="search-container">
         <input class="search-bar" type="search" placeholder="Search..." [(ngModel)]="searchTerm" />
-        <button id="button" (click)="searchQuestions()">
-            <i class="fa-solid fa-magnifying-glass search-icon" style="color: white">
-            </i>
+        <button type="submit" (click)="searchQuestions()">
+            <i class="fa-solid fa-magnifying-glass search-icon"> </i>
         </button>
     </div>
     <div class="button-container">
