--- a/peer-prep-fe/src/components/question-list/question-list.component.css
+++ b/peer-prep-fe/src/components/question-list/question-list.component.css
@@ -1,32 +1,32 @@
 .tourney-title {
-    color: white;
-    font-size: 60px;
-    margin-bottom: 40px;
-
+  color: white;
+  font-size: 60px;
+  margin-bottom: 40px;
 }
 
-  .question-list {
-    max-height: 600px; 
-    overflow-y: auto;
-    margin-top: 20px;
-  }
+.question-list {
+  max-height: 600px;
+  overflow-y: auto;
+  margin-top: 20px;
+}
 
-  .question-list::-webkit-scrollbar {
-    width: 8px; 
-  }
-  
-  .question-list::-webkit-scrollbar-thumb {
-    background-color: #ffffff; 
-    border-radius: 4px;
-  }
-  
-  .question-list::-webkit-scrollbar-thumb:hover {
-    background-color: #555; 
-  }
-  
-  .question-list::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
+.question-list::-webkit-scrollbar {
+  width: 8px;
+}
 
+.question-list::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  border-radius: 4px;
+}
 
-  
+.question-list::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.question-list::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.question-list > ul {
+  padding: 0;
+}
