--- a/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.css
+++ b/peer-prep-fe/src/components/search-and-filter/search-and-filter.component.css
@@ -11,21 +11,37 @@
     color: white;
     font-family: "Signika Negative", sans-serif;
     font-size: 22px;
-    background-color: transparent;
+    background-color: transparent;  
     border: 1px solid white;
     padding: 3px 40px 3px 40px;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     border-radius: 10px;
     width: 400px;
     text-transform: uppercase;
 }
 
 .search-icon {
-    position: absolute; 
-    top: 50%; 
-    transform: translateY(-50%); 
+    /* position: absolute;  */
+    /* top: 50%;  */
+    /* transform: translateY(-50%);  */
     color: white; 
     pointer-events: none; 
+}
+
+button[type="submit"] {
+    /* text-indent: -999px; */
+    overflow: hidden;
+    width: 40px;
+    padding: 0;
+    margin: 0;
+    /* border: 1px solid transparent; */
+    border-radius: inherit;
+    cursor: pointer;
+    opacity: 0.7;
+  }
+  
+button[type="submit"]:hover {
+    opacity: 1;
 }
 
 .button-container {
